<resources>
    <string name="app_name">MyDigimind</string>
    <string name="title_home">My Board</string>
    <string name="title_dashboard">New Reminder</string>
    <string name="title_notifications">Notifications</string>
    <string name="reminder_name">What do you want to remember to do?</string>
    <string name="takePill">Take my pill</string>
    <string name="when">When do you want to do it?</string>
    <string name="time">At what time?</string>
    <string name="done">Done</string>
    <string name="s">Sunday</string>
    <string name="m">Monday</string>
    <string name="t">Tuesday</string>
    <string name="w">Wednesday</string>
    <string name="th">Thursday</string>
    <string name="f">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="set_time">SET TIME</string>
</resources>