<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    android:paddingTop="20dp"
    android:paddingBottom="56dp"
    tools:context=".ui.dashboard.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logobrain"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:text="@string/reminder_name"/>

    <EditText
        android:id="@+id/et_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:hint="@string/takePill"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:text="@string/when"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/m"
                android:textSize="20sp"
                />

            <CheckBox
                android:id="@+id/checkMonday"
                android:layout_width="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/t"
                android:textSize="20sp"
                />

            <CheckBox
                android:id="@+id/checkTuesday"
                android:layout_width="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/w"
                android:textSize="20sp"
                />

            <CheckBox
                android:id="@+id/checkWednesday"
                android:layout_width="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/th"
                android:textSize="20sp"
                />

            <CheckBox
                android:id="@+id/checkThursday"
                android:layout_width="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/f"
                android:textSize="20sp"
                />

            <CheckBox
                android:id="@+id/checkFriday"
                android:layout_width="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/saturday"
                android:textSize="20sp"
                />

            <CheckBox
                android:id="@+id/checkSaturday"
                android:layout_width="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/s"
                android:textSize="20sp"
                />

            <CheckBox
                android:id="@+id/checkSunday"
                android:layout_width="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"/>
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        />

    <Button
        android:id="@+id/btn_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_time"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:background="?android:attr/selectableItemBackground"
        android:textSize="16sp"
        />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/done"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorAccent"
            />

    </LinearLayout>
    </ScrollView>
</LinearLayout>

